--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -620,6 +620,59 @@ pre code {
 .card-service .body {
   flex-grow: 1; /* Permite que o corpo do cartão cresça para ocupar o espaço restante */
 }
+/* ------- footer -----------------*/
+
+
+
+.ftco-footer {
+  color: var(--black-100, #010101);
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: 'Alatsi', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+.ftco-footer h2{
+  font-size: 18px;
+}
+
+.ftco-footer p{
+  color: var(--black-60, #676767);
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: Alatsi;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+}
+
+.ftco-footer a{
+  color: var(--black-60, #676767);
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: Alatsi;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+}
+
+
+
+.ftco-footer-widget ul {
+  list-style: none;
+  padding: 0;
+}
+
+.ftco-footer-widget ul li {
+  margin-bottom: 5px;
+}
+
+.ftco-footer-widget ul li a {
+  display: block;
+  margin-left: 0; 
+  padding: 5px 0; 
+}
 
 
 /* ------------------------ */
